footer style and global style added

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -74,3 +74,17 @@
     line-height: 2;
   }
   
+#footer {
+    background: #f64b4b;
+    padding: 50px 0;
+    color: #fff;
+    text-align: center;
+  }
+  
+  #footer .copyright {
+    margin: 0 0 15px;
+  }
+  
+  #footer .socials a:hover {
+    background:#fff;
+  }
