--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -66,4 +66,70 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  /* padding: 2rem; */
+  text-align: center;
+  --purple: #451952;
+  --wine: #662549;
+  --pink: #AE445A;
+  --orange: #F39F5A;
+  background-color: var(--purple);
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Source Sans 3", sans-serif;
+  font-weight: 400;
+  margin: 0 0 20px;
+  color:#F39F5A;
+}
+.body-text {
+  font-family: "Source Sans 3", sans-serif;
+  font-weight: 400;
+  margin: 0 0 20px;
+  color:#F39F5A;
+}
+h1 {
+  font-size: 46px;
+  color:#F39F5A;
+}
+
+h2 {
+  font-size: 30px;
+  color:#F39F5A;
+}
+
+h3 {
+  font-size: 22px;
+  color:#F39F5A;
+}
+
+h4 {
+  font-size: 18px;
+  color:#F39F5A;
+}
+
+h5 {
+  font-size: 17px;
+  color:#F39F5A;
+}
+
+h6 {
+  font-size: 15px;
+  color:#F39F5A;
+}
+
+p {
+  padding: 10px;
+  margin: 0 0 15px;
+  color: #F39F5A;
+  font-family: "Source Sans 3", sans-serif;
+  font-weight: 200;
+}
+
