--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -10,7 +10,7 @@ h3 {
     color:#F39F5A;
   }
 .hero-image {
-    background-image:url(./assets/images/headerPhoto.jpg), linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) ;
+    background-image:url(../assets/images/headerPhoto.jpg), linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) ;
     max-height: 100%;
     /* max-width:100%; */
     background-position: center;
