--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,90 +1,83 @@
 .go-top {
-    width: 50px;
-    height: 50px;
-    overflow: hidden;
-    text-indent: 101%;
-    white-space: nowrap;
-    transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: var(--pink);
-    border-radius: 3px;
-    color: #fff;
-    border: 0;
-  }
-  
-  .go-top:before {
-    width: 13px;
-    height: 13px;
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-    content: '';
-    border-style: solid;
-    border-color: #fff;
-    border-width: 1px 1px 0 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -3px 0 0 -6px;
-  }
-  
-  .go-top:hover {
-    background:#662549;
-  }
-  
-  .socials {
-    display: table;
-    height: 100%;
-    width: 100%;
-  }
-  
-  .socials ul {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-  }
-  
-  .socials li {
-    display: inline-block;
-    vertical-align: top;
-    padding: 0 5px;
-  }
-  
-  .socials a {
-    width: 35px;
-    height: 35px;
-    background:var(--pink);
-    color: var(--orange);
-    border-radius: 50%;
-    display: block;
-    text-align: center;
-    padding: 2px;
-    transition: background 0.3s linear, color 0.3s linear;
-    -webkit-transition: background 0.3s linear, color 0.3s linear;
-  }
-  
-  .socials a:hover {
-    background: var(--pink);
-    color:var(--wine)
-  }
-  
-  .socials .fab {
-    line-height: 2;
-  }
-  
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  text-indent: 101%;
+  white-space: nowrap;
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: var(--pink);
+  border-radius: 3px;
+  color: #fff;
+  border: 0;
+}
+.go-top:before {
+  width: 13px;
+  height: 13px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  content: '';
+  border-style: solid;
+  border-color: #fff;
+  border-width: 1px 1px 0 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -3px 0 0 -6px;
+}
+.go-top:hover {
+  background: #F41A1A;
+}
+.socials {
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+.socials ul {
+  list-style-type: none;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+.socials li {
+  display: inline-block;
+  vertical-align: top;
+  padding: 0 5px;
+}
+.socials a {
+  width: 35px;
+  height: 35px;
+  background:var(--pink);
+  color: var(--orange);
+  border-radius: 50%;
+  display: block;
+  text-align: center;
+  padding: 2px;
+  transition: background 0.3s linear, color 0.3s linear;
+  -webkit-transition: background 0.3s linear, color 0.3s linear;
+}
+.socials a:hover {
+  background: var(--pink);
+  color:var(--wine)
+}
+.socials .fab {
+  line-height: 2;
+}
 #footer {
-    background: #f64b4b;
-    padding: 50px 0;
-    color: #fff;
-    text-align: center;
-  }
-  
-  #footer .copyright {
-    margin: 0 0 15px;
-  }
-  
-  #footer .socials a:hover {
-    background:#fff;
-  }
+  background: #F64B4B;
+  padding: 50px 0;
+  color: #fff;
+  text-align: center;
+}
+#footer .copyright {
+  margin: 0 0 15px;
+}
+#footer .socials a:hover {
+  background:#fff;
+}
+.footer{
+flex-direction: column;
+}
