--- a/src/components/About.css
+++ b/src/components/About.css
@@ -28,4 +28,12 @@
     content: '-';
     margin: 0 0 0 5px;
   }
-  
+
+.about-image.col-sm-6 {
+}
+
+@media (min-width: 576px)
+.col-sm-6 {
+    flex: 0 0 auto;
+    width: 500px;
+}
